# tg_stats_bot

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  AUDIT_SUMMARY.md  CLAUDE.md  CODE_QUALITY.md  Dockerfile  IMPROVEMENTS_SUMMARY.md  README.md  alembic.ini  docker-compose.yml  install_requirements.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh  setup_resource_limits.sh  setup_supervisor.sh  setup_systemd.sh  start_bot.sh  status.sh  supervisor_tgstats.conf  tgstats-bot.conf  tgstats-bot.service
.github/: copilot-instructions.md
.github/workflows/: ci.yml
documentation/: 2026-07-22_deps-manifest-truth.md  2026-07-22_deps-tier-a.md  2026-07-23_test-suite-trustworthy.md  ADDITIONAL_IMPROVEMENTS.md  API_IMPROVEMENTS.md  API_USAGE_EXAMPLES.md  ARCHITECTURE_BEST_PRACTICES.md  ARCHITECTURE_DETAILED_2025.md  ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_IMPROVEMENTS_2025-12-16.md  ARCHITECTURE_REFACTORING.md  ARCHITECTURE_REVIEW_2026.md  AUTOMATION_SETUP.md  BEST_PRACTICES.md  BOT_ARCHITECTURE_IMPROVEMENTS.md  CODE_IMPROVEMENTS_APPLIED.md  CODE_IMPROVEMENTS_DECEMBER_2025.md  CODE_IMPROVEMENTS_HEATMAP.md  CODE_IMPROVEMENTS_SUMMARY.md  CODE_QUALITY_IMPROVEMENTS.md  CODE_REVIEW_2025.md  CODE_REVIEW_FINAL_SUMMARY.md  CODE_REVIEW_IMPROVEMENTS.md  CODE_REVIEW_SUMMARY.md  CODE_REVIEW_SUMMARY_2025.md  CODE_REVIEW_SUMMARY_DEC_2025.md  DBEAVER_CONNECTION_GUIDE.md  DEVELOPER_QUICK_START.md  ENGINEERING_AUDIT_IMPROVEMENTS.md  EXTENDED_FIELDS_QUERIES.md  EXTENDED_FIELDS_SUMMARY.md  EXTENDED_TELEGRAM_FIELDS.md  FIXES_APPLIED_2025-12-16.md  HOT_RELOAD_CONFIG.md  HOT_RELOAD_FIX.md  IMPROVEMENTS_2026-01-05.md  IMPROVEMENTS_CHECKLIST.md  IMPROVEMENTS_IMPLEMENTED.md  INFRASTRUCTURE_OPTIONS.md  LOGGING_IMPROVEMENTS.md  (+31 more)
documentation/adr/: 001-layered-architecture.md  README.md
k8s/: deployment.yaml
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_enable_timescaledb.py  003_create_hypertable.py  004_create_aggregates.py  (+8 more)
scripts/: alembic_parity.py  apply_limits_now.sh  dbdriver_parity.py  dotenv_parity.py  emergency_throttle.sh  emoji_parity.py  framework_parity.py  monitor_resources.sh  prom_parity.py  pydantic_parity.py  redis_parity.py  runtime_parity.py  seed_database.py  structlog_parity.py  tzdata_parity.py  view_logs.py
tests/: conftest.py  test_api_rate_limiting.py  test_auth_enhanced.py  test_bot_timeout_config.py  test_caching.py  test_common.py  test_database_connection.py  test_endpoints_smoke.py  test_engagement_fixes.py  test_engagement_service.py  test_features.py  test_forward_origin.py  test_heatmap.py  test_improvements.py  test_network_monitor.py  test_new_architecture.py  test_plugin_dependencies.py  test_plugins.py  test_repositories.py  test_security.py  test_services.py  test_step2.py  test_unit_of_work.py  test_validators.py
tgstats/: __init__.py  bot_main.py  celery_app.py  celery_tasks.py  config.py  db.py  enums.py  features.py  models.py
(+93 files in other folders)
