[project]
name = "tg-stats"
version = "0.1.0"
description = "Telegram analytics bot with multi-group support"
requires-python = ">=3.12"

# Dependencies are read from requirements.txt / requirements-dev.txt so there is
# exactly ONE pinned source of truth. They used to be duplicated here as open
# floors (fastapi>=0.100, structlog>=23.0, ...) with nine runtime packages
# missing entirely, and install_requirements.sh prefers this file whenever it
# exists — so `pip install -e .` resolved fastapi 0.139 + starlette 1.3 and
# structlog 26 (every deferred major, at once) while omitting redis, celery,
# prometheus-client, pyyaml, asyncpg and tzdata, which the bot imports at
# startup. Editing pins in one file and not the other is what caused that.
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies.dev = { file = ["requirements-dev.txt"] }

[build-system]
# >=62.6 for dynamic optional-dependencies from file
requires = ["setuptools>=62.6"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tgstats*"]
exclude = ["migrations*", "tests*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]
extend-exclude = "migrations"

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
skip = ["migrations", ".venv", "venv"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
